@@ -3,6 +3,8 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ===============================================================================
+    * Added German translation to Calc help hash. - nridley
+    * Added German translation to Bitly help hash. - nridley
     * Added German translation to AUR help hash. - nridley
 
 3.0 Alpha 9
