@@ -14,6 +14,8 @@ the popular Auto IRC bot.
 In this alpha10 release, we have added:
 
 * German translation for AUR command help.
+* German translation for Bitly command help.
+* German translation for Calc command help.
 
 Bug fixes:
 
